--- a/Tailwind-Starter/package.json
+++ b/Tailwind-Starter/package.json
@@ -4,12 +4,14 @@
   "description": "Startup Tailwind Template",
   "main": "index.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./css/input.css -o ./css/output.min.css --minify --watch",
+    "dev": "concurrently \"npx tailwindcss -i ./css/input.css -o ./css/output.min.css --minify --watch\" \"live-server --port=3000\"",
     "build": "npx tailwindcss -i ./css/input.css -o ./css/output.min.css --minify"
   },
   "author": "evan70",
   "license": "ISC",
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.6"
+    "@tailwindcss/cli": "^4.0.6",
+    "concurrently": "^9.1.2",
+    "tailwindcss": "^4.0.6"
   }
 }
