--- a/Vite-HTML/package.json
+++ b/Vite-HTML/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.0.7",
     "glob": "^11.0.1",
     "sass": "^1.85.0",
+    "tailwindcss": "^4.0.7",
     "vite": "^6.1.1",
     "vite-plugin-sass-glob-import": "^5.0.0"
   }
